--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918707.md#1" title="法轮大法洪传29周年 纽约学员向师尊祝寿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918709-148833-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12918699.md#1" title="中企悄悄买巨额英国资产 含能源国防领域""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/10/1110121409031793-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ckfwfs3192.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919995.md#1">美圣地亚哥海岸人口走私船翻覆 3死27人伤</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/3/n12920050.md#1">加州恐再释7.6万囚犯 含2万终身监禁犯</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919927.md#1">美议员提法案 限制世界银行向北京提供资金</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/3/n12920037.md#1">中国人口拐卖犯罪猖獗 被拐卖者需被“教育挽救”</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919925.md#1">古天乐黑人替身照热传 影片监制曝秘辛</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12920008.md#1">亚利桑那审计加速 投票机数据采集成功</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/3/22/n12828412.md#1">【思想领袖】帕斯卡：如何反击中共全面挑衅</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919995.md#1">美圣地亚哥海岸人口走私船翻覆 3死27人伤</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/3/n12920050.md#1">加州恐再释7.6万囚犯 含2万终身监禁犯</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919927.md#1">美议员提法案 限制世界银行向北京提供资金</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/3/n12920037.md#1">中国人口拐卖犯罪猖獗 被拐卖者需被“教育挽救”</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/2/n12919925.md#1">古天乐黑人替身照热传 影片监制曝秘辛</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12917976.md#1">【拍案惊奇】山东号停滞？清末学者预言中共结局</a><br>
 <a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/5/1/n12918289.md#1">天津和平公安分局主任跳楼身亡 官方噤声</a><br>
@@ -103,7 +103,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 376,649,614 人
+!共 376,652,257 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919132-1d381c35-da5a-48b3-a9ae-f1e7fcb7a313-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919119.md#1">绿叶行动薛仁义出狱日 重庆多人被控制</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917361.md#1">北京小汤山强拆后续 业主失联小区清场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913564.md#1">中共株连制打压百姓 母亲被儿子撵出家门</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916513.md#1">富商控全国人大蔡学恩律所 涉嫌虚构诉讼（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914624.md#1">退休上校死于山东监狱 中共被指步步违法</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12914772.md#1">贵阳基督徒遭非法拘留 状告公安局被拒</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919927.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12920018-Sri-Lanka-Belt-and-Road-1200x800-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919927.md#1">美议员提法案 限制世界银行向北京提供资金</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919948.md#1">中国28家银行四月发债2196亿人民币</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918466.md#1">经济安保考量 日本SBI取消与中国平安集团合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918421.md#1">浙江桐庐前首富被判18年 股权转手国资委</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917841.md#1">腾讯地图等33款APP 暗地收集用户资料</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917502.md#1">2020年中国农民工减少逾500万人</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919934.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1172545257-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919934.md#1">美日警告不要擅改东海现状 向中共释何信号</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919911.md#1">中共海警船频近钓鱼岛 日本拟新设运输部队</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919806.md#1">当年为何选在柏林向习喊话 前美国务次卿解释</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918496.md#1">美国密州就疫情追责 传唤中共多个部委</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919295.md#1">台驻法代表受邀去美驻外使馆交流 42年来首次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918997.md#1">山西霍州公安前副局长王大鸣被举报涉敲诈等</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918065-GettyImages-1232554642-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919737.md#1">印度疫情大爆发 专家分析对国际社会的影响</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919112.md#1">浙江一病例隔离14天后才呈阳性 曾搭乘火车</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917951.md#1">五一包茂高速重庆路段发生车祸 致4死1伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917342.md#1">中共专家称中国多地现印度毒株 网民热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12917187.md#1">莫迪第一时间感谢美国援助 陆媒抱怨不提北京</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/30/n12916661.md#1">广西再发砍人事件 传两名孩童被割喉</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920037.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12920059-2021-05-02_145106@1200x1200-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920037.md#1">中国人口拐卖犯罪猖獗 被拐卖者需被“教育挽救”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919449.md#1">杭州西湖游客如织 泰山人多景区不认遭驳斥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919222.md#1">五一武汉上海办音乐节 人潮挤爆未戴口罩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12919081.md#1">五一北京西站交通大瘫痪 旅客怨声载道</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/2/n12918917.md#1">南充女子持刀抢ATM存钱的市民 2人受伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917861.md#1">五一大陆景区游客密集 高速拥堵引吐槽</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/29/n12913513.md#1">传中南财经政法大学挖出两地雷 网络热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/28/n12910739.md#1">广西幼儿园砍人案十八伤 传多名幼儿死亡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909705.md#1">郭富城常演深沉角色 自认个性有趣不拒拍喜剧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/27/n12909172.md#1">美宣布放宽旅行限制 中国学生今秋可赴美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/26/n12906360.md#1">只因这句话？赵婷奥斯卡领奖 中共封杀</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/ckfwfs3192/djy/blob/master/gb/21/4/19/n12888922.md#1">【独家】文件爆西藏部队缺疫苗向河北求援</a><br>
