--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,12 +2,12 @@
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/13/n12878121.md#1" target="_blank">【独家】中共偷偷删除网上军民融合信息</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/13/n12878121.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/11/GettyImages-1055941042-320x200.jpg" align ="left"></a>美国商务部4月8日对7家中国超算实体的制裁，表明拜登政府沿袭了川普（特朗普）对中共“军民融合”的强硬政策。而大纪元获得的内部文件揭示中共早在中美贸易战开战之初.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 7:43 AM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919608.md#1" target="_blank">探秘世界各国的真实军力——美军有多强（一）</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919608.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919611-50037400673_659f7ff6e9_o-150x120.jpg" align ="left"></a>美军不但是太平洋的主角，还是全世界多数地区的军事主角。美国是世界上唯一实施全球军事战略的国家，位于“全球火力”（Global Firepower）排行的第一名。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 5:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919431.md#1" target="_blank">NASA逾50年首见 SpaceX载人飞船夜降大海</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919431.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919512-GettyImages-1232642970-1-150x120.jpg" align ="left"></a>周日（5月2日），美国太空探索技术公司SpaceX的龙飞船“坚韧号”（Resilience）成功将四名宇航员从国际空间站送回地球，降落于佛罗里达州墨西哥湾附近，完成商业载人航天任务。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:55 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12917244.md#1" target="_blank">【萧茗看世界】美亿万富翁大战华为</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12917244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918712-Keith_1920_cn-150x120.jpg" align ="left"></a>“在当今商业中，速度是最值钱的。数据领域的转型，要的就是这个速度。现在不是大鱼吃小鱼，而是快鱼吃慢鱼”。在谈到5G技术需求时，前副国务卿基思?克拉奇（Keith Krach）如是说。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918251.md#1" target="_blank">法轮功5200人排字贺创始人华诞 参与者谢师恩</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918251.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918327-2105010555472384-150x120.jpg" align ="left"></a>5月13日是世界法轮大法日，今年适逢法轮功创始人李洪志大师70华诞，台湾约5,200名部分法轮功学员于5月1日上午，在中正纪念堂的自由广场，排出“贺师尊华诞暨法轮大法洪传29周年”巨幅图像，向李大师祝贺华诞，同时庆祝法轮大法洪传29周年。参与排字的学员也谈到排字的心情，并感谢李大师传出法轮大法，让他们重新认识生命的真谛。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:00 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919595.md#1" target="_blank">不只弯道超车 中共围剿特斯拉阴谋（上）</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919595.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919604-GettyImages-1232397485-150x120.jpg" align ="left"></a>近几个月来，中共又以举国体制主导了一系列打压美国特斯拉公司中国业务的运动。其中以河南张姓女子大闹特斯拉郑州专卖店和上海车展特斯拉展位为先导，之后当局市场、质检部门跟进，各大党媒炒作带风向，一时间令特斯拉遭遇到商业以外的困境，成了爱国小粉红新的攻击对象。这些表演让国际社会进一步看清了中共对外企“养套杀”的阴险策略。那么，什么原因导致极权政府如此疯狂对待一个来中.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 12:52 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919498.md#1" target="_blank">岳山：武汉书记王忠林升官 爆中共3潜规则</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/03/534cb8393acb8a9914eb65cf207d3019-600x400-2-150x120.jpg" align ="left"></a>去年3月在武汉爆发大疫期间由济南空降武汉任市委书记的王忠林，5月1日已出任湖北省委副书记、省政府党组书记，按中共惯例，他将接替王晓东成为湖北省长。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 10:59 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919070.md#1" target="_blank">【疫情5.2】法国医疗援助设备抵达印度</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919070.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919584-GettyImages-1232640127-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（5月2日）上午4:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.52亿（152,209,709）例，死亡人数超过319万（3,192,852）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 9:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919296.md#1" target="_blank">布林肯赴伦敦参加G7外长会 联盟施压中共</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919296.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12879913-GettyImages-1232301479-150x120.jpg" align ="left"></a>七国集团（G7）外长会议将于5月3日至5日在英国伦敦举行。作为美国团结盟友对抗中共的一部分，美国国务卿布林肯周日（5月2日）启程前往伦敦。另外，布林肯此行也将表达美国对乌克兰的支持。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 9:18 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12917244.md#1" target="_blank">【萧茗看世界】美亿万富翁大战华为</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12917244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918712-Keith_1920_cn-150x120.jpg" align ="left"></a>“在当今商业中，速度是最值钱的。数据领域的转型，要的就是这个速度。现在不是大鱼吃小鱼，而是快鱼吃慢鱼”。在谈到5G技术需求时，前副国务卿基思?克拉奇（Keith Krach）如是说。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 8:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918426.md#1" target="_blank">分析：中共是自己的最大敌人</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918426.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/1210291432372519-600x400-150x120.jpg" align ="left"></a>知名中国政经专家、美国克雷蒙特麦肯纳学院（CMC）教授裴敏欣（Minxin Pei）周四（4月29日）发文分析指出，中国在全球经济中的作用使中共以傲慢自居，增加其侵略性行动。而这种做法恰恰会把自己推向危险的边缘，使原本中立的国家更加靠向美国，从而增加了对中共的生存威胁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 7:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918735.md#1" target="_blank">杨晖律师：中国到处是高压线 不止一根</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918735.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919340-yanghuiFotoJet-150x120.jpg" align ="left"></a>近日，福建厦门律师杨晖罕见因转让旧书被当地文化局行政处罚，罚款近三十万元人民币。杨晖质疑被查其实是因为代理敏感案件，并在网上为冤情发声。目前他已被迫从律所辞职。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 2:07 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918707.md#1" target="_blank">法轮大法洪传29周年 纽约学员向师尊祝寿</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918707.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918709-148833-150x120.jpg" align ="left"></a>“5.13世界法轮大法日”即将来临，大纽约区部分法轮功学员数百人，聚集在华人社区法拉盛的大公园，怀着感恩的心情，共同庆祝法轮大法洪传29周年，并向法轮功创始人李洪志先生祝贺生日快乐。
