--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -16,7 +16,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/26/n12906259.md#1" target="_blank">天堂梦（121）</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/26/n12906259.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>不仅和苏联的赫鲁雪夫弄得反脸，而且东欧共产党国家和几乎所有世界上共产党都远离他，他第一次出征就被钉子碰了回来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12915060.md#1" target="_blank">学会做计划 让学习变得更简单</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12915060.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/WAStudentsGradesAreLow-150x120.jpg" align ="left"></a>计划能力可以让学习变得更容易。无论是小学、中学还是大学生，都可以培养和发展自己的计划能力。俗话说：“失于计划就是在计划失败。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 9:32 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/28/n12911767.md#1" target="_blank">他们带着记忆转生 与前世亲人再续前缘</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/28/n12911767.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/08/shutterstock_1292585332-150x120.jpg" align ="left"></a>大千世界无奇不有。你能想像，突然有一天，有一个人来拜访自己，并说自己是其前世的亲人，甚至还记得前世的点点滴滴？事实上，这样的案例近些年来海外媒体报出了不少，尤其在信佛的印度、泰国等国，不过古代中国和近代典籍上早有这类记载。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 2:39 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/3/31/n12849718.md#1" target="_blank">【梅辛传】之七：预言希特勒亡 第三帝国崩毁</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/3/31/n12849718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/messing4-150x120.png" align ="left"></a>二战前夕，梅辛和汉森均在德国享有很高的声誉。然而，二人因秉持不同的理念，命运也为他们划出了不同的人生轨迹。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 8:05 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/3/n12920370.md#1" target="_blank">作文选登： 流浪犬有话说</a><br></h3>其实，我也曾是备受宠爱的“掌上明珠”，可“旧的不去，新的不来”，最终，我还是被抛弃了，来到了这险恶的街头地狱，沦落为“阶下囚”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 12:26 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919607.md#1" target="_blank">古体三首</a><br></h3>来来时去去，去去时来来。 来了还又去，去了还又来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919649.md#1" target="_blank">诗歌：夏临</a><br></h3> 青桃黄杏渐长成， 槐花若云摇香风。 睡莲池塘露笑脸， 夜合枝头飞红绒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918234.md#1" target="_blank">一七令．四季和声</a><br></h3>声。 飞雪，风声。 松林吼，似涛声。 冰消雪化，燕语莺声。 夏来迎酷暑，风雨伴雷声。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 12:17 AM			</td></tr>
