--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -5,7 +5,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919328.md#1" target="_blank">长时间工作与心脏病复发率高相关</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919328.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919333-man-working-late-700x420-150x120.jpg" align ="left"></a>长时间工作对我来说从来都不合理。为什么要为了一件事而牺牲那么多其它的呢?......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 2:17 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919357.md#1" target="_blank">改善心血管和降低糖尿病风险 冷水浴好处多</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919357.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919369-shutterstock_1590209080-150x120.jpg" align ="left"></a>有专家认为，循序渐进的冷水浴实际上可以为身体带来诸多健康方面的益处，包括减少上呼吸道感染及改善心血管系统方面的问题，甚至帮助降低糖尿病发展的风险等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 11:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919113.md#1" target="_blank">英男挥杆 小白球落在行进汽车上 创世界纪录</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12919113.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919116-golf-3685616_1920-150x120.jpg" align ="left"></a>在高尔夫球场上要将小白球打进洞里，已经不是一件容易的事，而英国一名职业高尔夫球员却在挥杆后，让小白球飞到几百公尺外一辆正在行驶的汽车上，更让人们觉得不可思议。他因为这项创举刷新了吉尼斯世界纪录。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:57 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918059.md#1" target="_blank">珀斯一建商渎职欺骗客户 董事被罚8千</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918059.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918072-e0988529125c3ac463872aca0985285d-150x120.jpg" align ="left"></a>珀斯一家注册建筑公司的董事（director）由于玩忽职守，欺骗客户，最近被西澳州行政仲裁庭（SAT）判罚8000澳元。该建房公司名为M3 Building and Construction，现已破产。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:42 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918059.md#1" target="_blank">珀斯建商欺骗客户 董事被罚8千</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918059.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918072-e0988529125c3ac463872aca0985285d-150x120.jpg" align ="left"></a>珀斯一家注册建筑公司的董事（director）由于玩忽职守，欺骗客户，最近被西澳州行政仲裁庭（SAT）判罚8000澳元。该建房公司名为M3 Building and Construction，现已破产。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:42 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918086.md#1" target="_blank">一季度珀斯公寓销量增58% 创8年来最高纪录</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918086.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918091-ebb8f31c9182803ddc3b252c1ad71103-150x120.jpg" align ="left"></a>根据西澳房地产协会（REIWA）的最新数据显示，今年第一季度珀斯公寓销售量达到了2013年以来的最高记录。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 6:36 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918986.md#1" target="_blank">世界最重芒果在哥伦比亚诞生 重达4公斤多</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918986.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918987-shutterstock_141314695-150x120.jpg" align ="left"></a>虽然芒果原产于亚洲地区，台湾和大陆都是主要产地，但世界最重的芒果却诞生在产量相对较低的哥伦比亚，其重量超过4公斤。这颗巨无霸芒果看起来像人头一样大，其它芒果跟它比起来简直就是小巫见大巫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 4:35 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918886.md#1" target="_blank">全球百大最具影响力企业出炉 台积电上榜</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918886.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918888-GettyImages-1231936348-150x120.jpg" align ="left"></a>台积电是全球晶圆代工龙头，在台湾半导体产业和世界半导体产业都占有举足轻重的地位，素有台湾“护国神山”的美誉。在美国《时代》杂志日前公布的全球百大最具影响力企业名单中，台积电便榜上有名，而且是唯一上榜的台湾企业。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 2:22 PM			</td></tr>
