--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -32,7 +32,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12913140.md#1" target="_blank">古风：中共正在把中国推向战争边缘</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12913140.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/32452144785c7952c6cd45c95f03b866-150x120.jpg" align ="left"></a>明年就是中共的换届年，中共对内煽动民族情绪，对外四处挑衅，以此来推卸其内政外交失利的责任。，就在中印军事冲突刚平息后，如今又在东海、台海和南海同时挑事。然而，中共对外的野蛮行为早已激怒了国际社会。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 3:16 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12912583.md#1" target="_blank">王友群：正告跟踪香港大纪元记者梁珍的特务</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12912583.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12912662-3jpeg@1200x1200-150x120.jpg" align ="left"></a>4月26日，香港大纪元记者梁珍，在采访途中，被中共特务跟踪。梁珍质问：“你是不是《大公报》记者？”跟踪的男子一听，撒退就跑。梁珍一边追赶，一边喊。这名男子加快速度，逃之夭夭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 11:32 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12912191.md#1" target="_blank">王赫：日本2021版外交蓝皮书与对华战略转变</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12912191.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12882682-000_9833BM-150x120.jpg" align ="left"></a>4月27日，日本外务大臣茂木敏充在内阁会议发表2021版《外交蓝皮书》，点名北京军事扩张。这再次引发中共跳脚，称已通过外交渠道向日方提出严正交涉。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 8:54 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/25/n12904739.md#1" target="_blank">王赫：为何要区分“中共病毒”与“中国病毒”</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/25/n12904739.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/2020-3-24-ccp-virus-600x400-150x120.png" align ="left"></a>“中国”之不同于“中共”，乃是一个再明白不过的事实，乃是一个常识。中国上下五千年，多次朝代更迭，无论哪个王朝、政权，只要丧失了合法性，都得垮台。这是谁也改变不了的历史铁律，于中共亦然。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 7:15 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/30/n12917021.md#1" target="_blank">【有冇搞错】中共计划出来的“未来人口危机”</a><br></h3>中国进入“未富先老”阶段，只是未来人口危机的前兆，这是一个被专制体制的中央计划设计出来的国家和民族危机。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 10:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/5/1/n12917801.md#1" target="_blank">袁斌：还原“恶霸地主刘文彩”的真相</a><br></h3>1965年初，在大邑县刘文彩地主庄园陈列馆，四川美术学院的师生们用泥巴塑造了一组解放前农民向地主交租的群像，这组以刘文彩为原型名为《收租院》的泥塑大大小小共114个，一个个栩栩如生，无言地诉说着刘文彩当年所干的种种坏事与罪恶--从小斗放贷、大斗收租、私设地牢、草菅人命，到喝人血、吃人奶……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 4:56 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914429.md#1" target="_blank">周晓辉：东方红曲调来自情歌 延安进行文革预演</a><br></h3>在中共几十年如一日的反复播放下，吹捧毛泽东的歌曲《东方红》可说是家喻户晓。迄今为止，大陆一些地方整点报时依旧采用的是该曲调。
 
